# cli

./: Cargo.toml
.github/workflows/: cd.yml
crates/cli/: Cargo.toml
crates/cli/src/tests/: mod.rs  sync.rs
crates/lib/: Cargo.toml
crates/lib/src/: sync.rs
