[workspace]
members = ["crates/cli", "crates/lib"]
resolver = "2"

[profile.release]
lto = "fat"

[workspace.dependencies]
rusqlite = "0.39.0"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
regex = "1.11.1"
nix = { version = "0.31.1", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
