[package]
name = "pkgx"
description = "Run anything"
authors = ["Max Howell <mxcl@me.com>", "Jacob Heider <jacob@pkgx.dev>"]
license = "Apache-2.0"
version = "2.9.0"
edition = "2021"
repository = "https://github.com/pkgxdev/pkgx"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
indicatif = "0.18.3"
serde_json = "1.0.135"
libpkgx = { version = "0.7.1", path = "../lib" }
console = { version = "0.16", default-features = false, features = [
  "ansi-parsing",
] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
native-tls = { version = "0.2", features = ["vendored"] }
# ^^ this is a transitive dependency
# ^^ we vendor OpenSSL ∵ we want to be standalone and just work inside minimal docker images
